# AMPS_simulation

./: .gitignore  LICENSE.txt  README.md  debug_circuit_test.py  debug_full_var.py  debug_outputs.py  main.py  pyproject.toml  requirements.txt  run_simulation.py  run_workflow_test.py  setup.py  test_full_var4.py  test_integrated_lcp.py
amps_simulation/: __init__.py  run_simulation.py  simulation.py
amps_simulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
circuit_sim/: equations.py  parsing.py  state_space_model.py
debug/: debug_bridge_rectifier.py  debug_full_workflow.py  debug_graph.py  debug_node_mapping.py  test_programmatic_api.py  test_shunt_resistors.py  test_solver_integration.py  test_switch_solver.py
docs/: architecture.md
test_data/: DaeModel.json  DaeModel_circuit_var_solution.json  DaeModel_kcl_minimal.json  DaeModel_meters.json  control_sources_V_LCR.json  control_sources_V_LCR_I.json  diodes_rc_off.json  diodes_rc_on.json  diodes_rect4.json  diodes_rect4_v2.json  electricalModelKCL.json  engine_RC_switch.json  engine_nostates.json  engine_resistive.json  engine_switch_control.json  engine_switch_meters.json  full_var0.json  full_var1.json  full_var2.json  full_var3.json  full_var4.json  parser_all_components.json  parser_no_ground_node.json  parser_nodes.json  test.json  test_2switches.json  test_2v.json  test_2v2.json  test_2v3.json  test_2v_series.json  test_2v_series2.json  test_buck.json  test_error_c_short.json  test_error_vs_c_parallel.json  test_error_vs_parallel.json  test_error_vs_short.json  test_lcr.json  (+12 more)
(+49 files in other folders)
